# builderbase-bot

./: .gitignore  Attacker.py  BorderDetector.py  CMakeLists.txt  LineComputation.cpp  ScreenReader.py  img_reader_util.py  speed.py  test.py
AttackStrategy/: AttackStrategyFactory.py  AttackStrategyType.py  GiantCannon.py  Strategies.py  Troops.py  __init__.py
clicker/: LineClicker.py  PointClicker.py  __init__.py
utils/: MathUtils.py
